tests/fixtures/positive/release-engineering/HardcodedLocalhostUrl.java
package com.example.releaseengineering;

class ApiConfig {
  static final String API = "http://localhost:8080/api/v1";
}
