tests/fixtures/negative/release-engineering/HardcodedLocalhostUrl.java
package com.example.releaseengineering;

class ApiConfig {
  static final String API = "https://api.example.com/v1";
}
